Fix spacing and add lines to calendar header

--- a/src/styles/calendar/CalendarHeader.scss
+++ b/src/styles/calendar/CalendarHeader.scss
@@ -68,15 +68,20 @@
         }
 
         .courseMenu {
-            width: 100%;
+            width: 105%;
             position: absolute;
             top: 36px;
             border: solid 1px #e5e5e5;
             border-radius: 5px;
-            padding: 15px 25px;
+            padding: 8px 20px;
             background-color: white;
             z-index: 1;
             animation: fadeIn 0.5s;
+
+            .editClasses {
+                margin: 8px -20px;
+                border-top: solid 0.5px #d4d4d4;
+            }
 
             li {
                 border: none;
